--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -13,7 +13,7 @@
         android:id="@+id/encabezado">
 
         <ImageView
-            android:id="@+id/item_icon_detail"
+            android:id="@+id/ivDetalle"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
@@ -24,7 +24,7 @@
             tools:srcCompat="@drawable/ic_baseline_monetization_on_24" />
 
         <TextView
-            android:id="@+id/name_moneda"
+            android:id="@+id/tvNameMoneda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
@@ -41,7 +41,7 @@
             android:text="@string/symbol_moneda"/>
 
         <Button
-            android:id="@+id/get_info"
+            android:id="@+id/btnGetInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
