--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -33,7 +33,7 @@
             android:text="@string/name_moneda"/>
 
         <TextView
-            android:id="@+id/symbol_detail"
+            android:id="@+id/tvSymbolDetalle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -71,6 +71,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvRanking"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/rank"
@@ -90,11 +91,12 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvEstatus"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:text="@string/status"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:text="@string/status"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/status"
